add publication strategy draft [#4] and list of publications [#5]

--- a/content/20.partA.md
+++ b/content/20.partA.md
@@ -372,15 +372,16 @@ the overall precision and recall. We then follow the same probe-mapping approach
 
 <!--https://github.com/iqbal-lab/pandora1_paper/issues/209-->
 
-We filtered `pandora` variants based on the following criteria:
+We filtered `pandora` (Nanopore/Illumina) variants based on the following criteria:
 
-- Depth less than 15x
-- Less than 20% of reads are on one strand
-- 50% or more of k-mers on the allele have zero coverage
+- Depth less than 10x/5x
+- Less than 5%/5% of reads are on one strand
+- 60%/80% or more of k-mers on the allele have zero coverage
+- 
 
-After we have run this analysis, we will also most likely need to investigate applying
-filters to the VCF file to remove any biases relating to problems like strand bias or
-coverage.
+<!--TODO add ROC and associated text-->
+<!--https://github.com/leoisl/pandora1_paper_full_pipeline/issues/1-->
+<!--https://github.com/iqbal-lab/pandora1_paper/issues/206-->
 
 Whilst I wrote nearly all of the code and associated tests for evaluating the recall for
 this analysis, a lot of it has since been refactored by Leandro Ishi and by Martin Hunt
@@ -390,10 +391,6 @@ methods, along with 3500 lines of test code to ensure there are no bugs in our
 evaluation. Additionally, I built the original `snakemake` [@doi:10/gd2xzq] pipeline of
 approximately 3500 lines of codes to orchestrate the entire evaluation and simulations
 (However, much of this has been rewritten by Leandro Ishi).
-
-<!--TODO add ROC and associated text-->
-<!--https://github.com/leoisl/pandora1_paper_full_pipeline/issues/1-->
-<!--https://github.com/iqbal-lab/pandora1_paper/issues/206-->
 
 #### Outstanding work
 
@@ -847,8 +844,8 @@ other bacteria.
 
 One question which will be of particular interest for this section will be whether reads
 covering one *pe/ppe* gene map to various others. If, as shown by others, *pe/ppe* genes
-arose through gene conversion [@doi:10/ddsnv6], we would expect this to be the case.
-However, having high-quality assemblies built from a combination of long- and short-read
+arose through gene conversion [@pmc:PMC1660551], we would expect this to be the case. However,
+having high-quality assemblies built from a combination of long- and short-read
 technologies, we hope we can improve on the current nucleotide resolution and allow more
 accurate mapping to these genes. The main deliverable from this section will be a
 collection of high-quality *pe/ppe* PRGs with information about what read length will
