add draft of thesis timeline [#6]

--- a/content/30.partB.md
+++ b/content/30.partB.md
@@ -15,7 +15,8 @@
   and
   [Chapter 3](./20.partA.md#chapter-3-applications-to-improving-m-tuberculosis-drug-resistance-prediction)
   will also be contained in a paper, of which I will be the first author. We aim to have
-  this work completed and a manuscript submitted by the end of November 2020.
+  this work completed and a manuscript submitted by the end of November 2020 - or the
+  first quarter of 2021 at the latest.
 - The work in
   [Chapter 4](./20.partA.md#chapter-4-construction-of-a-m-tuberculosis-reference-pan-genome)
   is a bit harder to put an approximate date on, but we would hope to have it completed
@@ -54,8 +55,36 @@ am also involved in the following publications:
 
 ### Work plan and timeline for thesis submission
 
-> Provide a work plan to be completed prior to thesis writing and a timeline for
-> submission.
+I started working on my thesis in April 2020. For the last two months I have been
+spending approximately 2 hours a week writing.  
+The writing I have done includes:
+
+- The methods section for *de novo* variant discovery in Chapter 1.
+- The methods and results for sections in Chapter 2 covering the training of an
+  Mtb-specific basecalling model, an assembly method benchmark for the samples we have
+  PacBio data for, and the quality control of the data.
+
+I plan to continue writing the results and methods for Chapter 2 and 3 in parallel with
+the daily work I am doing. As the work in these chapters will be published together (see
+[Publication Strategy](#publication-strategy)) I hope to have completed a well-polished
+draft for them both by the end of the year.
+
+As a lot of the work in Chapters 2 and 3 leverage (and improve) the methods in Chapter
+1, I will revisit this chapter once the work in these two chapters is complete. By this
+point, the `pandora` paper will be submitted, as will the paper for Chapter 2 and 3.
+This will allow me to write a "finalised" methods and results section for Chapter 1. As
+such, I plan to take some time at the start of next year (2021) to work solely on
+getting Chapter 1 to a near-finished state.
+
+Chapter 4 will be approached in a similar manner to Chapters 2 and 3 - writing methods
+and results in parallel with the work I am doing. This means I will hope to have this
+chapter in a near-complete state, regardless of whether I "finish" the project before
+when I need to submit.
+
+Lastly, I will work on the introductory chapter. I prefer to do this once I have a clear
+picture of all of the topics touched on in the body of the work.
+
+I plan to submit (pending the six-month extension) my thesis in (INSERT MONTH) 2021.
 
 ### List of scientific courses and conferences attended to date and planned for next year
 
