add list of conferences [#7]

--- a/content/30.partB.md
+++ b/content/30.partB.md
@@ -88,7 +88,11 @@ I plan to submit (pending the six-month extension) my thesis in (INSERT MONTH) 2
 
 ### List of scientific courses and conferences attended to date and planned for next year
 
-> Please list all events in reverse chronological order.
+- Applied Bioinformatics and Public Health Microbiology, Hinxton, UK - May 2021
+- [TBScience][tbscience] - October 2020 (virtual)
+- [Genome Informatics][gi] - September 2020 (virtual)
+- CRyPTIC Consortium Annual Meeting, Hyderabad, India - October 2019
+- [Computational Pan-genomics workshop][bielefeld], Bielefeld, Germany - October 2019
 
 ### List of additional training, teaching and other relevant activities to date
 
@@ -123,3 +127,6 @@ I plan to submit (pending the six-month extension) my thesis in (INSERT MONTH) 2
 
 [app-note]: https://academic.oup.com/bioinformatics/pages/instructions_for_authors#Types%20of%20Manuscript
 [lsf]: https://github.com/Snakemake-Profiles/lsf
+[tbscience]: https://conf2020.theunion.org/programme/tb-science/
+[gi]: https://coursesandconferences.wellcomegenomecampus.org/our-events/genome-informatics-2020/
+[bielefeld]: https://www.uni-bielefeld.de/(en)/ZiF/AG/2019/09-30-Stoye.html
