add other activities section [#8]

--- a/content/30.partB.md
+++ b/content/30.partB.md
@@ -96,7 +96,8 @@ I plan to submit (pending the six-month extension) my thesis in (INSERT MONTH) 2
 
 ### List of additional training, teaching and other relevant activities to date
 
-> Please list all training and other activities in reverse chronological order.
+- [Hackseq][hackseq], October 2019 (virtual). I was involved in a project that created
+  an automated bioinformatics bug discovery tool called [`hypothesis-bio`][hypo-bio].
 
 ### Career development plan
 
@@ -130,3 +131,5 @@ I plan to submit (pending the six-month extension) my thesis in (INSERT MONTH) 2
 [tbscience]: https://conf2020.theunion.org/programme/tb-science/
 [gi]: https://coursesandconferences.wellcomegenomecampus.org/our-events/genome-informatics-2020/
 [bielefeld]: https://www.uni-bielefeld.de/(en)/ZiF/AG/2019/09-30-Stoye.html
+[hackseq]: https://www.hackseq.com/hackseq19
+[hypo-bio]: https://github.com/IQTLabs/hypothesis-bio
