add draft of career development section [#9]

--- a/content/30.partB.md
+++ b/content/30.partB.md
@@ -103,33 +103,89 @@ I plan to submit (pending the six-month extension) my thesis in (INSERT MONTH) 2
 
 #### Please describe your current long-term career aims (i.e. 3-5 years after PhD).
 
+Within 3-5 years of completing my PhD I hope to be in a postdoctoral position.
+Geographically, I will be based in Queensland, Australia with my (soon-to-be) wife. I
+would like to continue working on Mtb genomics. Some Mtb-related topics I would like to
+pursue would be real-time analysis from a Nanopore device and also method development
+for improving our ability to analyse mixed infections. I also have a strong desire to do
+research within the reproducible bioinformatics field.
+
 #### Please comment on the types of position you would like to apply to for after the PhD and your expected application timeline?
 
-> If applying for postdoc positions, which fields/fellowships are you considering? If
-> you are applying for non-academic careers, what type of role? Do you have target
-> companies or organisations in mind?
+I have already been in discussions with Lachlan Coin (my Master's supervisor), from the
+University of Melbourne, about the possibility of a job post-PhD. He recently received
+funding for a project aimed at implementation, in Papua New Guinea, of rapid
+direct-from-sample DNA sequencing approaches to characterise drug resistant
+tuberculosis, and evaluation of the accuracy of this approach compared to standard
+culture-based approaches. The bioinformatics component of this project is not yet filled
+and Lachlan and I are in discussions about the possibility of me joining the project in
+either a postdoc or research officer capacity.
+
+There are also a couple of Australian-based postdoctoral fellowships I would like to
+apply for within the next year or two:
+
+- Australian Research Council (ARC) [Discovery Early Career Researcher Awards][decra]
+  (DECRA). The applications for funding beginning 2022 closes on October 14 2020.
+  Therefore, I will need to apply for this fellowship next year (for 2023 funding). This
+  grant provides focused research support for early career researchers in both teaching
+  and research, and research-only positions.
+- [NHMRC Investigator Grant][nhmrc]: These grants provide the investigator with
+  flexibility to pursue important new research directions as they arise and to form
+  collaborations as needed, rather than being restricted to the scope of a specific
+  research project. This grant has been [postponed][postpone], but applications are
+  likely to open in February/March 2021. I will need to try and begun discussions with a
+  university partner in order to be able to apply for this funding and come up with a
+  project.
+
+In addition to these national-level funding schemes, I have started contacting
+researchers in Queensland to discuss mutual research interests and see if there is any
+funding already available within established projects.
 
 #### What do you see as your strengths (2-3 skills)?
 
-#### What do you see as your areas for improvement1 (2-3 areas)?
+- Nanopore bioinformatics method development and analysis
+- Bacterial variant-calling evaluation
+- Software engineering
+
+#### What do you see as your areas for improvement (2-3 areas)?
+
+- Structural organisation of the Mtb genome
+- Phylogenetics
+- Writing and reviewing academic publications
 
 #### What are your career development priorities until the end of your contract?
 
-> Please take into account both the scientific and non-scientific skills you will need
-> to work on a successful and timely completion of the PhD. List the skills you still
-> need to acquire to achieve your longer-term career aims.
+- Improve on my understanding of Mtb genomics at the nucleotide level, but also macro
+  elements such as the pan-genomic landscape. This skill set will benefit both my PhD
+  and my future postdoctoral aspirations to work on Mtb further.
+- Reviewing and writing papers will be a valuable set of skills for applying to
+  postdoctoral fellowships and is something that can fit into the completion of my PhD
+  nicely.
 
 #### What actions will you take to develop these skills?
 
-> This may include training courses, opportunities to practice and develop these skills,
-> or seeking feedback/guidance. N.B. fellows should take 1-2 non-scientific trainings or
-> career development workshops per year, and at least one international conference
-> during their PhD.
+- Chapters 2, 3, and 4 of my thesis will all dramatically improve upon my understanding
+  of Mtb genomics.
+- The TBScience conference I am (virtually) attending in October 2020 is another action
+  I am taking to increase my Mtb knowledge. It is part of the Union World Conference On
+  Lung Health and so will cover a wide range of Mtb topics.
+- I am currently reviewing a paper together with Zam to learn how this process works. I
+  plan to be involved in other reviewing opportunities before the end of my PhD.
+- Aside from writing my thesis, I have at least three publications that I would like to
+  first-author before the end of my PhD. The practise of writing and submitting these
+  will no doubt help me when it comes time to write a grant proposal for a postdoctoral
+  position.
+- I have registered for the EMBL "Applying to postdoc positions" workshop (late-October)
+  and am also waiting for the next "Grant Writing" workshop to become available.
 
 [app-note]: https://academic.oup.com/bioinformatics/pages/instructions_for_authors#Types%20of%20Manuscript
-[lsf]: https://github.com/Snakemake-Profiles/lsf
-[tbscience]: https://conf2020.theunion.org/programme/tb-science/
-[gi]: https://coursesandconferences.wellcomegenomecampus.org/our-events/genome-informatics-2020/
 [bielefeld]: https://www.uni-bielefeld.de/(en)/ZiF/AG/2019/09-30-Stoye.html
+[decra]: https://www.arc.gov.au/grants/discovery-program/discovery-early-career-researcher-award-decra
+[gi]: https://coursesandconferences.wellcomegenomecampus.org/our-events/genome-informatics-2020/
 [hackseq]: https://www.hackseq.com/hackseq19
 [hypo-bio]: https://github.com/IQTLabs/hypothesis-bio
+[lsf]: https://github.com/Snakemake-Profiles/lsf
+[nhmrc]: https://www.nhmrc.gov.au/funding/find-funding/investigator-grants
+[postpone]: https://www.nhmrc.gov.au/about-us/news-centre/changes-nhmrcs-grant-schedule-and-policies-response-covid-19
+[tbscience]: https://conf2020.theunion.org/programme/tb-science/
+
