--- a/content/10.tac.md
+++ b/content/10.tac.md
@@ -1,4 +1,4 @@
-## Thesis Advisory Committee {.page_break_before}
+## Thesis Advisory Committee
 
 - Zamin Iqbal (Supervisor) - EMBL-EBI
 - John Marioni (Chair) - EMBL-EBI
