update precision and recall plots for pandora [#1]

--- a/content/20.partA.md
+++ b/content/20.partA.md
@@ -395,7 +395,10 @@ We filtered `pandora` (Nanopore/Illumina) variants based on the following criter
 - Less than 5%/5% of reads are on one strand
 - 60%/80% or more of k-mers on the allele have zero coverage
 
-![ROC curve for Illumina and Nanopore data](images/roc.png){#fig:roc}
+![Recall](images/recall.png){#fig:recall}
+
+
+![Precision](images/precision.png){#fig:precision}
 
 Whilst I wrote nearly all of the code and associated tests for evaluating the recall for
 this analysis, a lot of it has since been refactored by Leandro Ishi and by Martin Hunt
